WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
68943
premultiplyAlpha
Missing initialization of member in ImageFrameQt class
https://bugs.webkit.org/show_bug.cgi?id=68943
Summary
Missing initialization of member in ImageFrameQt class
Adenilson Cavalcanti Silva
Reported
2011-09-27 15:13:23 PDT
While using Qt image decoder, the class member premultiplyAlpha is not being initialized or copied by assignment operator (thus at best depending on compiler/platform or simply random). This patch fixes this issue. ps: the same behavior is implemented in Skia port and grob branch.
Attachments
Initialize premultiplyAlpha and copy in operator
(1.15 KB, patch)
2011-09-27 15:14 PDT
,
Adenilson Cavalcanti Silva
no flags
Details
Formatted Diff
Diff
Patch
(1.61 KB, patch)
2011-09-27 20:07 PDT
,
Adenilson Cavalcanti Silva
no flags
Details
Formatted Diff
Diff
Initialize premultiplyAlpha and copy in operator plus Changelog
(1.96 KB, patch)
2011-09-27 20:10 PDT
,
Adenilson Cavalcanti Silva
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Adenilson Cavalcanti Silva
Comment 1
2011-09-27 15:14:48 PDT
Created
attachment 108910
[details]
Initialize premultiplyAlpha and copy in operator
Kenneth Rohde Christiansen
Comment 2
2011-09-27 17:04:47 PDT
Comment on
attachment 108910
[details]
Initialize premultiplyAlpha and copy in operator r=, misses ChangeLog!
Adenilson Cavalcanti Silva
Comment 3
2011-09-27 20:07:24 PDT
Created
attachment 108952
[details]
Patch
Adenilson Cavalcanti Silva
Comment 4
2011-09-27 20:10:34 PDT
Created
attachment 108953
[details]
Initialize premultiplyAlpha and copy in operator plus Changelog
Noam Rosenthal
Comment 5
2011-09-27 23:26:13 PDT
Comment on
attachment 108953
[details]
Initialize premultiplyAlpha and copy in operator plus Changelog It's already reviewed, you don't need to r? it again.
WebKit Review Bot
Comment 6
2011-09-28 00:21:44 PDT
Comment on
attachment 108953
[details]
Initialize premultiplyAlpha and copy in operator plus Changelog Clearing flags on attachment: 108953 Committed
r96196
: <
http://trac.webkit.org/changeset/96196
>
WebKit Review Bot
Comment 7
2011-09-28 00:21:49 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug