Missing initialization of member in ImageFrameQt class https://bugs.webkit.org/show_bug.cgi?id=68943

Patch by Adenilson Cavalcanti <adenilson.silva@openbossa.org> on 2011-09-28
Reviewed by Kenneth Rohde Christiansen.

No new tests, this fixes internal implementation detail.

* platform/image-decoders/qt/ImageFrameQt.cpp:
(WebCore::ImageFrame::ImageFrame):
(WebCore::ImageFrame::operator=):

Canonical link: https://commits.webkit.org/84965@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@96196 268f45cc-cd09-0410-ab3c-d52691b4dbfc